<resources>

    <string name="app_name">AeonCharge</string>

    <string name="default_notification_channel_id"></string>

    <string name="facebook_app_id">741515580030623</string>
    <string name="fb_login_protocol_scheme">fb741515580030623</string>

    <string name="server_client_id">665969741972-n78itfbokvaklgdog429hf6842ktpt8r.apps.googleusercontent.com</string>

    <string name="aeon_continue">Continue</string>
    <string name="aeon_ok">Ok</string>
    <string name="become_a_member">Become a Member</string>
    <string name="verification_code_was_sent_to_your_email">Verification code was sent to your email</string>
    <string name="verification_code_was_sent_to_your_phone_number">Verification code was sent to your phone number</string>
    <string name="directions">Directions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms &amp; conditions</string>
    <string name="clear">Clear</string>
    <string name="show"><u>Show</u></string>
    <string name="password">Password</string>
    <string name="password_was_changed_successfully">Password was changed successfully</string>
    <string name="co_2_saved_ppm">CO<sup>2</sup> Saved: %d ppm</string>
    <string name="your_password">Your password</string>
    <string name="hide"><u>Hide</u></string>
    <string name="uppercase_letter">Uppercase letter</string>
    <string name="one_digit">One digit</string>
    <string name="special_character">Special @#$ character</string>
    <string name="_8_characters">8 characters</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="your_email_phone_country_code">Your email / phone (+country code)</string>
    <string name="name">Name</string>
    <string name="check_design_setup">Check design setup</string>
    <string name="continue_regular_flow">Continue regular flow</string>
    <string name="this_demonstrates_design_styles_applied_for_android_application_it_will_be_removed_later">This demonstrates design styles applied for Android application. It will be removed later.</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="no_matter_what_time_it_is_you_can_always_access_a_charger_at_your_favorite_locations">No matter what time it is, you can always access a charger at your favorite locations</string>
    <string name="have_a_level_2_ev_charger_and_willing_to_help_travelers">Have a level 2 EV charger and willing to help travelers? - \n Just share it! Your electricity cost is covered</string>
    <string name="every_time_when_we_use_electricity_instead_of_gasoline">Every time when we use electricity instead of gasoline, we save CO2 and make the world cleaner</string>
    <string name="get_access_to_ev_chargers_anytime">Get access to EV chargers anytime!</string>
    <string name="share_your_charger_and_help_ev_travelers">Share your charger and help EV travelers</string>
    <string name="contribute_to_a_cleaner_environment">Contribute to a cleaner environment</string>
    <string name="create_account">Create account</string>
    <string name="underlined_create_account"><u>Create account</u></string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="underlined_privacy_policy"><u>Privacy Policy</u></string>
    <string name="underlined_terms_and_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="underlined_login"><u>Log in</u></string>
    <string name="invalid_email_or_phone_number">Invalid email or phone number</string>
    <string name="enter_the_code_here">Enter the code here</string>
    <string name="resend_code">Resend code</string>
    <string name="resend_code_timer">Resend code (%s)</string>
    <string name="sending">Sending...</string>
    <string name="code_sent">Code sent</string>
    <string name="add_your_phone_number">Add your phone number</string>
    <string name="privacy_and_security_of_your_data_is_our_top_priority_by_adding_a_phone_number_you_strengthen_the_protection_of_your_account">Privacy and security of your data is our top priority. By adding a phone number you strengthen the protection of your account</string>
    <string name="select_preferable_account_type">Select preferable account type</string>
    <string name="you_can_have_two_accounts_at_the_same_time_choose_one_now_and_you_can_create_the_other_one_later">You can have two accounts at the same time. Choose one now and you can create the other one later</string>
    <string name="i_need_to_charge_my_ev_member">I need to charge my EV (member)</string>
    <string name="i_have_an_ev_charger_host">I have an EV charger (host)</string>
    <string name="select_ev_charger_owner_type">Select EV charger owner type</string>
    <string name="individual">Individual</string>
    <string name="business">Business</string>
    <string name="aeon_cancel">Cancel</string>
    <string name="log_in">Log in</string>
    <string name="reset_password">Reset password</string>
    <string name="profile_setup">Profile setup 1/2</string>
    <string name="profile_setup_two">Profile setup 2/2</string>
    <string name="profile_setup_3_3">Profile setup 3/3</string>
    <string name="profile_setup_1_3">Profile setup 1/3</string>
    <string name="profile_setup_2_3">Profile setup 2/3</string>
    <string name="profile_image">Profile image</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="upload">Upload</string>
    <string name="change">Change</string>
    <string name="john">John</string>
    <string name="johnson">Johnson</string>
    <string name="skip">Skip</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose From Gallery</string>
    <string name="create_new_password">Create new password</string>
    <string name="create_password">Create password</string>
    <string name="save_password">Save password</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="booking_history">Booking history</string>
    <string name="requests_history">Requests history</string>
    <string name="chats">Chats</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="availability">Availability</string>
    <string name="account_verification">Account verification</string>
    <string name="contact_support">Contact support</string>
    <string name="ev_profile_text_helper">Setup your EV profile to customize the search results for charging stations and app features</string>
    <string name="finish_setup">Finish setup</string>
    <string name="ev_profile">EV profile</string>
    <string name="ev_add">Add another EV</string>
    <string name="ev_delete">Delete EV</string>
    <string name="ev_make">EV make</string>
    <string name="ev_add_custom_male">Add custom EV make</string>
    <string name="ev_color">EV color</string>
    <string name="select">Select</string>
    <string name="connector_types">Connector types</string>
    <string name="confirm">Confirm</string>
    <string name="add_type">Add another type</string>
    <string name="most_popular">The most popular</string>
    <string name="custom">Custom</string>
    <string name="other">Other</string>
    <string name="no_results_found">No results found</string>
    <string name="finish">Finish</string>
    <string name="verify_now">Verify now</string>
    <string name="verification_info_helper">You\'re almost there!</string>
    <string name="address_verification">1. Address verification</string>
    <string name="address_verification_helper_one">Code will be sent to your address by mail. As soon as you receive it, please enter it in the app settings to confirm your location</string>
    <string name="address_verification_helper_two">You have 2 weeks to enter the code that was sent to you by mail. After that people won\'t be able to find you in the search</string>
    <string name="payment_verification">2. Payment verification</string>
    <string name="payment_verification_helper">You can provide your EV charger and earn funds. But to withdraw money you will need to verify account. You will receive funds to your bank account within a few days after verification</string>
    <string name="private_data_helper">Private data won\'t appear anywhere</string>
    <string name="charger_text_helper">Add some information to let customers know about your EV charger and start to earn</string>
    <string name="charger_title">Garage / charger photos (optional)</string>
    <string name="charger_content">Help customers find your EV charger. Photos will be shown only after booking is confirmed</string>
    <string name="up_to_five_picture">Up to 5 pictures</string>
    <string name="charger_info">EV charger info</string>
    <string name="address">Address</string>
    <string name="second_street_line">Second street line (optional)</string>
    <string name="charging_speed">EV charging speed (kWh)</string>
    <string name="charging_instruction">Charging instruction</string>
    <string name="charging_instruction_details_text">Describe all the details and instructions for customers</string>
    <string name="charger_location">EV charger location</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_address">Enter address</string>
    <string name="please_enter_state">Please enter the state, city and exact address where EV charger is currently located</string>

</resources>