<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_rounded_top_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/takePhoto"
        style="@style/BaseText.Turquoise.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_top_white"
        android:gravity="center"
        android:paddingTop="@dimen/_16dp"
        android:paddingBottom="@dimen/_16dp"
        android:text="@string/take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/chooseGallery"
        style="@style/BaseText.Turquoise.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/_16dp"
        android:paddingBottom="@dimen/_16dp"
        android:text="@string/choose_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePhoto" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cancel"
        style="@style/BaseText.Black.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aeon_cancel"
        android:gravity="center"
        android:paddingTop="@dimen/_16dp"
        android:paddingBottom="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@+id/chooseGallery" />



</androidx.constraintlayout.widget.ConstraintLayout>

