<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="am.victor.clean_like_app.ui.create_new_password.CreateNewPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/BaseFragment.White"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <requestFocus />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/_32dp"
            android:layout_height="@dimen/_32dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_12dp"
            android:background="?actionBarItemBackground"
            android:onClick="@{() -> model.onBackButtonClick()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resetPasswordTV"
            style="@style/BaseText.Black.24.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/create_new_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton" />

        <FrameLayout
            android:id="@+id/firstDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/resetPasswordTV" />

        <am.victor.clean_like_app.utils.views.RegularEditText
            android:id="@+id/passwordRET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/firstDivider"
            app:password_listener="@{model::onPasswordChanged}"
            app:ret_floating_hint="@string/password"
            app:ret_hint="@string/create_password"
            app:ret_input_type="password" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BaseButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:onClick="@{() -> model.onSavePasswordButtonClick()}"
            android:enabled="@{model.savePasswordButtonState}"
            android:text="@string/save_password"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>