<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="am.victor.clean_like_app.ui.setup_profile_individual_provider.personal_data.viewmodel.IPSetupPersonalDataViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/BaseFragment.White"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/backButton"
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginBottom="@dimen/_12dp"
                        android:background="?actionBarItemBackground"
                        android:onClick="@{()-> model.onBackButtonClick()}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_left" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/skipButton"
                        style="@style/BaseButton.skip"
                        android:layout_width="@dimen/_104dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:text="@string/skip"
                        android:onClick="@{()-> model.onSkipButtonClick()}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    style="@style/BaseText.ProfileSetup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:text="@string/profile_setup_1_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                <FrameLayout
                    android:id="@+id/firstDivider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@color/light_gray"
                    app:layout_constraintTop_toBottomOf="@id/appCompatTextView" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView2"
                    style="@style/BaseText.ProfileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_44dp"
                    android:text="@string/profile_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    app:circle="@{true}"
                    app:image_source="@{model.mainImage}"
                    android:src="@drawable/ic_placeholder"
                    app:thumb_source="@{@drawable/ic_placeholder}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/uploadChangeButton"
                    style="@style/BaseButton.upload"
                    android:layout_width="@dimen/_104dp"
                    android:layout_height="@dimen/_32dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:onClick="@{() -> model.onUploadChangeClick()}"
                    android:text="@string/upload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"  />

                <am.victor.clean_like_app.utils.views.RegularEditText
                    android:id="@+id/regularEditText"
                    input_listener="@{model::onNameFieldChanged}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_24dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:background="@color/light_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/uploadChangeButton"
                    app:ret_floating_hint="@string/first_name"
                    app:ret_hint="@string/john"
                    app:ret_input_type="text" />

                <am.victor.clean_like_app.utils.views.RegularEditText
                    input_listener="@{model::onSureNameFieldChanged}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_24dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:background="@color/light_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/regularEditText"
                    app:ret_floating_hint="@string/last_name"
                    app:ret_hint="@string/johnson"
                    app:ret_input_type="text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            style="@style/BaseButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:onClick="@{()-> model.onContinueButtonClick()}"
            android:enabled="@{model.continueButtonState}"
            android:text="@string/aeon_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
