<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="am.victor.clean_like_app.ui.create_account_add_phone_number.CreateAccountAddPhoneNumberViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/BaseFragment.White"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <requestFocus />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/_32dp"
            android:layout_height="@dimen/_32dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_12dp"
            android:background="?actionBarItemBackground"
            android:onClick="@{() -> model.onBackButtonClick()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addYourPhoneNumberTV"
            style="@style/BaseText.Black.24.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/add_your_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton" />

        <FrameLayout
            android:id="@+id/firstDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/addYourPhoneNumberTV" />

        <am.victor.clean_like_app.utils.views.RegularEditText
            android:id="@+id/phoneNumberRET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            app:input_listener="@{model::onPhoneNumberChanged}"
            app:layout_constraintTop_toBottomOf="@id/firstDivider"
            app:ret_floating_hint="Phone Number"
            app:ret_input_type="phone_number" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/helperTV"
            style="@style/BaseText.DarkGray.13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:text="@string/privacy_and_security_of_your_data_is_our_top_priority_by_adding_a_phone_number_you_strengthen_the_protection_of_your_account"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberRET" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helperTV">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BaseText.Turquoise.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp"
                android:text="@string/underlined_privacy_policy" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BaseText.Turquoise.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp"
                android:text="@string/underlined_terms_and_conditions" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BaseButton.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:enabled="@{model.continueButtonState}"
            android:onClick="@{() -> model.onContinueButtonClick()}"
            android:text="@string/aeon_continue"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>